Fix get one participant methods